2001-08-29  Peter Targett  <peter.targett@arccores.com>

	* MAINTAINERS: Include ARC Maintainer.

2001-08-29  Ben Elliston  <bje@redhat.com>

	* stabs.c (stab_demangle_template): Initialise s4.

2001-08-27  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (dump_relocations): Recognise EM_PPC64.

2001-08-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* readelf.c (get_machine_flags): Add detection of EF_MIPS_32BITMODE.

2001-08-25  H.J. Lu  <hjl@gnu.org>

	* nm.c (print_width): New.
	(display_rel_file): Set `print_width' according to
	bfd_sprintf_vma.
	(print_symbol_info_bsd): Check `print_width' instead of BFD64.

2001-08-24  Alexandre Oliva  <aoliva@redhat.com>

	* objcopy.c (use_alt_mach_code): New variable.
	(OPTION_ALT_MACH_CODE): Define.
	(copy_options): Added --alt-machine-code.
	(copy_main): Handle it.
	(copy_object): Switch to alternate machine code if requested.
	* doc/binutils.texi: Document new option.
	* NEWS: Likewise.

2001-08-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* readelf.c (get_machine_flags): Add detection of EF_MIPS_UCODE.

2001-08-21  H.J. Lu  <hjl@gnu.org>

	* readelf.c (dump_relocations): Support ELF64 on 32bit hosts.
	(display_debug_info): Cast for 64bit hosts.
	(display_debug_frames): Likewise.
	(process_mips_specific): Likewise.

2001-08-21  Andreas Jaeger  <aj@suse.de>

	* coffgrok.h: Add missing parameter for prototype of coff_grok.

	* sysdump.c: Add missing prototypes.
	* srconv.c: Likewise.
	* unwind-ia64.c: Likewise.
	* coffdump.c: Likewise.

	* sysinfo.y: Print prototypes, include <ansidecl.h>.

	* coffgrok.c: Add missing prototypes, include libiberty.h instead
	of declaring xcalloc.

2001-08-10  H.J. Lu  <hjl@gnu.org>

	* nm.c (print_value): Add one arg, bfd *.
	(print_value): Replace fprintf_vma with bfd_fprintf_vma.
	(print_symbol_info_bsd): Also pass `abfd' to print_value ().
	(print_symbol_info_sysv): Likewise.
	(print_symbol_info_posix): Likewise.
