@@ -1,3 +1,7 @@
+2001-08-31  Eric Christopher  <echristo@redhat.com>
+
+	* readelf.c (get_machine_flags): Remove E_MIPS_MACH_MIPS32_4K.
+
 2001-08-29  Peter Targett  <peter.targett@arccores.com>
 
 	* MAINTAINERS: Include ARC Maintainer.
